--- a/M3U4/ejercicio3m3u4.html
+++ b/M3U4/ejercicio3m3u4.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <link rel="stylesheet" href="">
 
     <head>
 
@@ -17,11 +24,18 @@
                 nombre: 'Florencia Martinez',
                 nota: 10
             }, { nombre: 'Raul Sanchez', nota: 7 }, { nombre: 'Sandra Figueroa', nota: 8 }];
+            
 
-            var aprobados = alumnos.filter(nota => 7);
+            var aprobados = alumnos.filter(function (alumno)){
+                return alumno.nota >= 7;
+            }
 
             console.log(aprobados);
+
+            for( var i=0; i<aprobados.length; i++){
+                document.write('<p> Alumno: ${aprobados[i].nombre}, Nota:${aprobados[i].nota</p>')}
+            
         </script>
-  
+
     </body>
 </head>
